# ZZ3-IDM-TP3

./: .gitignore  CMakeLists.txt  README.md
include/: monteCarloPi.hpp  stats.hpp
src/: gattaca.cpp  monteCarloMain.cpp  monteCarloPi.cpp  randomTextGen.cpp  simPi.cpp  simPiThreads.cpp  stats.cpp  testRandom.cpp
